--- a/public/styles/variables/_dimensions.scss
+++ b/public/styles/variables/_dimensions.scss
@@ -58,6 +58,11 @@
   --margin-text-header: 1em 0 .3em 0;
   --margin-text-subheader: 1.2em 0 .3em 0;
   --margin-text-text: 0 0 1em 0;
+
+  --margin-tags-hashtag: 0 6px 0 0;
+  --margin-tags-tag: 4px 4px;
+  --padding-tags-hashtag: 0 6px;
+  --padding-tags-tag: 0 8px 0 0;
 }
 
 
